--- a/2013/1km paper/data_taking.tex
+++ b/2013/1km paper/data_taking.tex
@@ -31,8 +31,7 @@ safe distance of $10\,\sigma_{x} \approx 7.5$\,mm.
 
 The events collected were triggered by a logical \textit{OR} of: inelastic 
 trigger (activity in either arm of T1 or T2), double-arm proton trigger 
-(coincidence of any RP left of IP5 and any RP right of IP5) and zero-bias trigger
-(random bunch crossings) for calibration purposes.
+(coincidence of any RP left of IP5 and any RP right of IP5) and zero-bias trigger (random bunch crossings) for calibration purposes.
 
 In the close and distant diagonals a total of 190k and 162k elastic event candidates have been tagged, respectively.
 
