Vojtech's comments, updated figure 11, Vojtech's paragraph for conclusions.
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@11476 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/bibliography.tex
+++ b/2013/1km paper/bibliography.tex
@@ -1,42 +1,42 @@
 \bibitem{plb43}
 	\Name{U.~Amaldi et al.}
-	\Review{Phys.~Lett.~B}{43}{1973}{231-236}.
+	\Review{Phys.~Lett.~B}{43}{1973}{231 -- 236}.
 
 \bibitem{plb66}
 	\Name{U.~Amaldi et al.}
-	\Review{Phys.~Lett.~B}{66}{1977}{390-394}.
+	\Review{Phys.~Lett.~B}{66}{1977}{390 -- 394}.
 
 \bibitem{npb141}
 	\Name{L.~Baksay et al.}
-	\Review{Nucl.~Phys.~B}{141}{1978}{1-28}.
+	\Review{Nucl.~Phys.~B}{141}{1978}{1 -- 28}.
 
 \bibitem{prl47}
 	\Name{D.~Favart et al.}
-	\Review{Phys.~Rev.~Lett.}{47}{1981}{1191-1194}.
+	\Review{Phys.~Rev.~Lett.}{47}{1981}{1191 -- 1194}.
 
 \bibitem{plb115}
 	\Name{M.~Ambrosio et al.}
-	\Review{Phys.~Lett.~B}{115}{1982}{495-502}.
+	\Review{Phys.~Lett.~B}{115}{1982}{495 -- 502}.
 
 \bibitem{plb120}
 	\Name{N.~Amos et al.}
-	\Review{Phys.~Lett.~B}{120}{1983}{460-464}.
+	\Review{Phys.~Lett.~B}{120}{1983}{460 -- 464}.
 
 \bibitem{plb128}
 	\Name{N.~Amos et al.}
-	\Review{Phys.~Lett.~B}{128}{1983}{343-348}.
+	\Review{Phys.~Lett.~B}{128}{1983}{343 -- 348}.
 
 \bibitem{npb262}
 	\Name{N.~Amos et al.}
-	\Review{Nucl.~Phys.~B}{262}{1985}{689-714}.
+	\Review{Nucl.~Phys.~B}{262}{1985}{689 -- 714}.
 
 \bibitem{plb198}
 	\Name{D.~Bernard et al.}
-	\Review{Phys.~Lett.~B}{198}{1987}{583-589}.
+	\Review{Phys.~Lett.~B}{198}{1987}{583 -- 589}.
 
 \bibitem{plb316}
 	\Name{C.~Augier et al.}
-	\Review{Phys.~Lett.~B}{316}{1993}{448-454}.
+	\Review{Phys.~Lett.~B}{316}{1993}{448 -- 454}.
 
 \bibitem{prl68}
 	\Name{N.~A.~Amos et al.}
@@ -44,7 +44,7 @@
 
 \bibitem{wy68}
 	\Name{G.~B.~West and D.~R.~Yennie}
-	\Review{Phys. Rev.}{172}{1968}{1413--1422}
+	\Review{Phys. Rev.}{172}{1968}{1413 -- 1422}
 	%title     = "Coulomb interference in high-energy scattering",
 	%doi       = "10.1103/PhysRev.172.1413",
 
@@ -55,7 +55,7 @@
 
 \bibitem{8tev-90m}
 	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
-	\Review{Nucl.~Phys.~B}{899}{2015}{527-546}.
+	\Review{Nucl.~Phys.~B}{899}{2015}{527 -- 546}.
 	%Evidence for Non-Exponential Elastic Proton-Proton Differential Cross-Section at Low |t| and sqrt(s) = 8 TeV by TOTEM:
 
 \bibitem{kl94}
@@ -113,12 +113,12 @@
 	\Review{Nucl.~Instrum.~Meth.}{A 355}{1995}{541}.
  	% Where to stick your data points: The treatment of measurements within wide bins
 
-\bibitem{block06}
+\bibitem{block96}
 	\Name{M.~M.~Block}
-	\Review{Phys.~Rept.}{436}{2006}{71--215}.
-	%Hadronic forward scattering: Predictions for the Large Hadron Collider and cosmic rays
-	%doi       = "10.1016/j.physrep.2006.06.003",
-
+	\Review{Phys.~Rev.~D}{54}{1996}{4337--4343}
+	%title = {Are we really measuring the phase of the nuclear scattering amplitude?},
+	%doi = {10.1103/PhysRevD.54.4337},
+	
 \bibitem{jan_thesis}
 	\Name{J.~Ka\v spar}
 	PhD Thesis, CERN-THESIS-2011-214,
@@ -142,10 +142,6 @@
 	\Review{Z.~Phys.~C}{37}{1987}{7--16}.
 	%title={An impact parameter analysis of proton-proton elastic and inelastic interactions at 360 GeV/c}
 	%url={http://dx.doi.org/10.1007/BF01442063}
-
-\bibitem{kl-8tev}	
-	\Name{Vojt\v ech et al.}
-	\TODO{Note with peripheral-phase parameters at 8TeV}.
 
 \bibitem{klk02}
 	\Name{V.~Kundr\' at, M.~Lokaj\' i\v cek and D.~Krupa}
@@ -174,7 +170,7 @@
 
 \bibitem{kmr00-multiPom}
 	\Name{V.~A.~Khoze, A.~D.~Martin and M.~G.~Ryskin}
-	\Review{Eur.~Phys.~J.~C}{18}{2000}{167-179}.
+	\Review{Eur.~Phys.~J.~C}{18}{2000}{167 -- 179}.
 	%Soft diffraction and the elastic slope at Tevatron and LHC energies: a multi-Pomeron approach
 	%doi={10.1007/s100520000494}
 
@@ -205,3 +201,15 @@
 \bibitem{pdg} 
 	\Name{K.~Nakamura \etal{}~(Particle Data Group)}
 	\Review{J.~Phys.}{G37}{2010}{075021}.
+
+\bibitem{kklp11}
+	\Name{J.~Ka\v spar, V.~Kundr\' at, M.~V.~Lokaj\' i\v cek and J.~Proch\' azka}
+	\Review{Nucl.~Phys.~B}{843}{2011}{84 -- 106}.
+	%title = "Phenomenological models of elastic nucleon scattering and predictions for \{LHC\} ",
+	%doi = "http://dx.doi.org/10.1016/j.nuclphysb.2010.09.020",
+
+\bibitem{cahn82}
+	\Name{R. Cahn}
+	\Review{Z.~Phys.~C}{15}{1982}{253 -- 260}
+	%title={Coulombic-hadronic interference in an eikonal model},
+	%doi={10.1007/BF01475009},
