--- a/2013/1km paper/differential_cross_section.tex
+++ b/2013/1km paper/differential_cross_section.tex
@@ -378,7 +378,7 @@ The final cross-section is tabulated in Table~\ref{tab:data} and visualised in F
 \includegraphics{fig/t_dist_tabulation.pdf}
 \vskip-3mm
 \caption{%
-Differential cross-section from Table \ref{tab:data} with statistical (bars) and systematic uncertainties (bands). The yellow band represents all systematic uncertainties, the brown one all but normalisation. The bands are centred around a data fit including both nuclear and Coulomb components (Eqs.~(\ref{eq:int kl}), (\ref{eq:nuc phase con}) and (\ref{eq:nuc mod}) with $N_b=3$). LEFT: a low-$|t|$ zoom of the differential cross-section. RIGHT: differential cross-section over the full $|t|$ range plotted relative to a reference exponential (the same as in \cite{8tev-90m}).
+Differential cross-section from Table \ref{tab:data} with statistical (bars) and systematic uncertainties (bands). The yellow band represents all systematic uncertainties, the brown one all but normalisation. The bands are centred around a data fit including both nuclear and Coulomb components (Eqs.~(\ref{eq:int kl}), (\ref{eq:nuc phase con}) and (\ref{eq:nuc mod}) with $N_b=3$). INSET: a low-$|t|$ zoom featuring cross-section rise due to the Coulomb interaction.
 }
 \label{fig:dsdt}
 \end{center}
@@ -397,7 +397,7 @@ where $i$ and $j$ are bin indices (row numbers in Table~\ref{tab:data}) and the 
 \begin{center}
 \includegraphics{fig/systematic_uncertainties.pdf}
 \caption{%
-Impact of systematic effects on the differential cross-section. Each curve corresponds to a systematic error at $1\un{\sigma}$, cf.~Eq.~(\ref{eq:syst mode}). The two contributions due to optics correspond to the two vectors in Eq.~(\ref{eq:opt bias modes}). The envelope is determined by summing all shown contributions in quadrature for each $|t|$ value.
+Impact of systematic effects on the differential cross-section. Each curve corresponds to a systematic error of $1\un{\sigma}$, cf.~Eq.~(\ref{eq:syst mode}). The two contributions due to the optics correspond to the two vectors in Eq.~(\ref{eq:opt bias modes}). The envelope is determined by summing all shown contributions in quadrature for each $|t|$ value.
 }
 \label{fig:syst unc}
 \end{center}
