--- a/2013/1km paper/conclusions.tex
+++ b/2013/1km paper/conclusions.tex
@@ -1,6 +1,6 @@
 \section{Summary and Outlook}
 \label{sec:summary}
-For the first time at LHC the differential cross-section of elastic proton-proton scattering has been measured at $|t|$-values down to the Coulomb-nuclear interference (CNI) region. This was made possible by a special beam optics, a novel collimation procedure and by moving the RPs to an unprecedented distance of only $3\,\sigma$ from the beam centre.
+For the first time at LHC the differential cross-section of elastic proton-proton scattering has been measured at $|t|$-values down to the Coulomb-nuclear interference (CNI) region. This was made possible by a special beam optics, a novel collimation procedure and by moving the RPs to an unprecedented distance of only $3\,\sigma$ from the circulating beam centre.
 
 To fit $\d\sigma/\d t$ in the CNI region, two interference formulae -- Simplified West and Yennie (SWY) and Kundr\' at-Lokaj\' i\v cek (KL) -- 
 were explored in conjunction with different mathematical descriptions of the modulus and phase of the nuclear amplitude as a function of $t$. The nuclear modulus was parametrised as an exponential function with a polynomial slope of degree 0 or 2 ($N_b=1$ or $3$ parameters). These two alternatives allowed to test whether the nuclear modulus can be purely exponential or more flexibility is required. For the phase two options were considered, leading to different impact-parameter distributions of elastic scattering events: a constant phase implying a central behaviour, and a description favouring peripheral collisions. The following conclusions can be drawn.
@@ -18,4 +18,6 @@ The $\rho$ parameter was for the first time at LHC extracted via the Coulomb-nuc
 
 The new total cross-section determination is conceptually more accurate than in all previous LHC publications since the CNI effects are explicitly treated. Moreover, the value of $\rho$ comes from the same analysis, not from an external source, which underlines consistency. The $\sigma_{\rm tot}$ values are very well consistent among all non-excluded fits and compatible with the previous measurements. As expected, the new determination yields slightly greater values relative to previous results where the negative CNI was not taken into account.
 
-For even stronger results in the future the key point is a better distinction between the nuclear and CNI cross-section components, which can be achieved from both theoretical and experimental sides. New theory developments may narrow down the range of allowed parametrisations of the nuclear modulus and phase or better constrain the induced CNI effects. The experimental improvements include increasing statistics and reducing the lower $|t|$ threshold. For the former, TOTEM has already upgraded the RP mechanics such that both vertical pots can be simultaneously placed very close to the beam. For the latter, TOTEM foresees an optics with extremely high $\beta^* \approx 2500\un{m}$ which would allow to reach the CNI region even at Run II energies. Moreover, recent experience with the $\beta^* = 90\un{m}$ optics at $\sqrt s = 13\un{TeV}$ shows that very low beam emittances can be achieved, thus possibly reducing the RP distance from the beam.
+It may be seen from the results in Section \ref{sec:coulomb} that the physical interpretation of elastic collisions depends on various additional assumptions on corresponding mathematical models. It concerns both nuclear and Coulomb fit components. We would like to call an attention to at least one issue. The standard QED expression for the Coulomb cross-section, Eq.~(\ref{eq:coul cs}), tends to infinity for $t\to 0$ which can be seen as a consequence of large impact paramter values assumed in the initial state; however in any experiment only small impact parameter values are responsible for measured data. Greater theoretical attention should be devoted to the precise description of the experimental initial states and to the modeling of the fundamental interactions.
+
+For even stronger results in the future the key point is a better distinction between the nuclear and CNI cross-section components, which can be achieved from both theoretical and experimental sides. New theory developments may narrow down the range of allowed parametrisations of the nuclear modulus and phase or better constrain the induced CNI effects. The experimental improvements include increasing statistics and reducing the lower $|t|$ threshold. For the former, TOTEM has already upgraded the RP mechanics such that both vertical pots can be simultaneously placed very close to the beam. For the latter, TOTEM foresees an optics with extremely high $\beta^* \approx 2500\un{m}$ which would allow to reach the CNI region even at Run II energies. Moreover, recent experience with the $\beta^* = 90\un{m}$ optics at $\sqrt s = 13\un{TeV}$ shows that very low beam emittances can be achieved, thus possibly furthr reducing the RP distance from the beam.
