--- a/2013/1km paper/experimental_apparatus.tex
+++ b/2013/1km paper/experimental_apparatus.tex
@@ -14,7 +14,7 @@ The data analysed here come from the RPs only. A RP is a movable beam-pipe
 insertion capable of approaching the LHC beam to less than a millimeter, in 
 order to detect protons with scattering angles of only a few microradians. 
 The proton spectrometer is organised in two RP stations: one on the left side of the IP 
-(LHC sector 45) and one on the right (LHC sector 56).
+(LHC sector 45) and one on the right (LHC sector 56), see Figure~\ref{fig:rpsketch}.
 Each RP station, located between 215 and 220\,m from the IP, is composed of two 
 units: ``near'' (215\,m from the IP) and ``far'' (220\,m). 
 A unit consists of 3 RPs, one
@@ -33,3 +33,13 @@ opposite directions, the detected events can have two topologies, called
 diagonals: 45 bottom -- 56 top and 45 top -- 56 bottom.
 
 This report uses a reference frame where $x$ denotes the horizontal axis (pointing out of the LHC ring), $y$ the vertical axis (pointing against gravity) and $z$ the beam axis (in the clockwise direction).
+
+\begin{figure}
+\begin{center}
+\includegraphics{fig/elastic_principle.pdf}
+\caption{%
+Schematic view of the RP stations at $\pm220\,$m from IP5 with two proton tracks from an elastic event. Also shown are the built-in beam position monitors, BPM, and beam loss monitors, BLM.
+}
+\label{fig:rpsketch}
+\end{center}
+\end{figure}
