--- a/2013/1km paper/experimental_apparatus.tex
+++ b/2013/1km paper/experimental_apparatus.tex
@@ -36,7 +36,7 @@ This report uses a reference frame where $x$ denotes the horizontal axis (pointi
 
 \begin{figure}
 \begin{center}
-\includegraphics{fig/elastic_principle.pdf}
+\includegraphics[width=0.6\textwidth]{fig/elastic_principle.pdf}
 \caption{%
 Schematic view of the RP stations at $\pm220\,$m from IP5 with two proton tracks from an elastic event. Also shown are the built-in beam position monitors, BPM, and beam loss monitors, BLM.
 }
