--- a/2013/1km paper/data_taking.tex
+++ b/2013/1km paper/data_taking.tex
@@ -26,8 +26,7 @@ vertical RP unit could not approach each other close enough to be both at a
 distance of $3\,\sigma_{y} = 780\,\mu$m from the beam centre. Therefore a 
 configuration with one RP diagonal (45 top -- 56 bottom) at $3\,\sigma_{y}$ (``close diagonal'') and the other (45 bottom -- 56 top) at 
 $10\,\sigma_{y}$ (``distant diagonal'') was chosen. The distant diagonal provides a systematic comparison at larger $|t|$-values.
-The horizontal RPs were only needed for the alignment and therefore placed at a
-safe distance of $10\,\sigma_{x} \approx 7.5$\,mm.
+The horizontal RPs were only needed for the data-based alignment and therefore placed at a safe distance of $10\,\sigma_{x} \approx 7.5$\,mm, close enough to have an overlap with the vertical RPs (Figure~\ref{fig:rpsketch}, right).
 
 The events collected were triggered by a logical \textit{OR} of: inelastic 
 trigger (activity in either arm of T1 or T2), double-arm proton trigger 
