--- a/2013/1km paper/beam_optics.tex
+++ b/2013/1km paper/beam_optics.tex
@@ -14,7 +14,7 @@ Note that for elastic collisions the dispersion terms $D\,\xi$ can be ignored be
 
 The data for the analysis presented here have been taken with a new, special optics, conventionally labelled by the value of the $\beta$-function at the interaction point, $\beta^{*} = 1000\,$m, and specifically developed for measuring low-$|t|$ elastic scattering. It maximises the vertical effective length $L_{y}$ at the RP position $z = 220\un{m}$ and minimises the vertical magnification $|v_{y}|$ at $z = 220\,$m (Table~\ref{tab:optics}). This configuration is called
 ``parallel-to-point focussing'' because all protons with the same angle in the IP are focussed on one point in the RP at 220\,m. It optimises the sensitivity to the vertical projection of the scattering angle -- and hence to $|t|$ -- while minimising the influence of the vertex position. 
-In the horizontal projection the parallel-to-point focussing condition is not fulfilled, but -- unlike in the $\beta^{*} = 90\,$m optics used for previous measurements~\cite{epl96,epl101-el,epl101-tot,prl111} -- the effective length $L_{x}$ at $z = 220\,$m does not vanish, which helps in the reconstruction of the horizontal component of the scattering angle.
+In the horizontal projection the parallel-to-point focussing condition is not fulfilled, but -- unlike in the $\beta^{*} = 90\,$m optics used for previous measurements~\cite{epl96,epl101-el,epl101-tot,prl111} -- the effective length $L_{x}$ at $z = 220\,$m is non-zero, which helps in the reconstruction of the horizontal component of the scattering angle.
 %
 \begin{table}
 \caption{
