--- a/2013/1km paper/conclusions.tex
+++ b/2013/1km paper/conclusions.tex
@@ -7,7 +7,7 @@ were explored in conjunction with different mathematical descriptions of the mod
 \begin{itemize}
 \item Purely exponential nuclear modulus ($N_b=1$), constant phase: excluded with more than $7\un{\sigma}$ confidence. Since this is the only combination compatible with the SWY formula, its application is excluded, too.
 \item Purely exponential nuclear modulus ($N_b=1$), peripheral phase: the data do not exclude this option which, however, may be disfavoured from other perspectives.
-\item Non-exponential nuclear modulus ($N_b=3$): both constant and peripheral phases are well compatible with data, therefore the central impact-parameter picture is not a necessity.
+\item Non-exponential nuclear modulus ($N_b=3$): both constant and peripheral phases are well compatible with the data, therefore the central impact-parameter picture is not a necessity.
 \end{itemize}
 
 The $\rho$ parameter was for the first time at LHC extracted via the Coulomb-nuclear interference. The preferred fits ($N_b=3$) can be summarised by
@@ -18,6 +18,6 @@ The $\rho$ parameter was for the first time at LHC extracted via the Coulomb-nuc
 
 The new total cross-section determination is conceptually more accurate than in all previous LHC publications since the CNI effects are explicitly treated. Moreover, the value of $\rho$ comes from the same analysis, not from an external source, which underlines consistency. The $\sigma_{\rm tot}$ values are very well consistent among all non-excluded fits and compatible with the previous measurements. As expected, the new determination yields slightly greater values relative to previous results where the negative CNI was not taken into account.
 
-It may be seen from the results in Section \ref{sec:coulomb} that the physical interpretation of elastic collisions depends on various additional assumptions on corresponding mathematical models. It concerns both nuclear and Coulomb fit components. We would like to call an attention to at least one issue. The standard QED expression for the Coulomb cross-section, Eq.~(\ref{eq:coul cs}), tends to infinity for $t\to 0$ which can be seen as a consequence of large impact paramter values assumed in the initial state; however in any experiment only small impact parameter values are responsible for measured data. Greater theoretical attention should be devoted to the precise description of the experimental initial states and to the modeling of the fundamental interactions.
+It may be seen from the results in Section \ref{sec:coulomb} that the physical interpretation of elastic collisions depends on various additional assumptions on corresponding mathematical models. It concerns both nuclear and Coulomb fit components. We would like to draw the reader's attention to at least one issue. The standard QED expression for the Coulomb cross-section, Eq.~(\ref{eq:coul cs}), tends to infinity for $t\to 0$ which can be seen as a consequence of large impact parameter values assumed in the initial state. However, in any experiment only small impact parameter values -- e.g. given by the beam dimensions -- are responsible for the measured data. Greater theoretical attention should be devoted to the precise description of the experimental initial states and to the modelling of the fundamental interactions.
 
-For even stronger results in the future the key point is a better distinction between the nuclear and CNI cross-section components, which can be achieved from both theoretical and experimental sides. New theory developments may narrow down the range of allowed parametrisations of the nuclear modulus and phase or better constrain the induced CNI effects. The experimental improvements include increasing statistics and reducing the lower $|t|$ threshold. For the former, TOTEM has already upgraded the RP mechanics such that both vertical pots can be simultaneously placed very close to the beam. For the latter, TOTEM foresees an optics with extremely high $\beta^* \approx 2500\un{m}$ which would allow to reach the CNI region even at Run II energies. Moreover, recent experience with the $\beta^* = 90\un{m}$ optics at $\sqrt s = 13\un{TeV}$ shows that very low beam emittances can be achieved, thus possibly furthr reducing the RP distance from the beam.
+For even stronger results in the future the key point is a better distinction between the nuclear and CNI cross-section components, which can be achieved from both theoretical and experimental sides. New theory developments may narrow down the range of allowed parametrisations of the nuclear modulus and phase or better constrain the induced CNI effects. The experimental improvements include increasing statistics and reducing the lower $|t|$ threshold. For the former, TOTEM has already upgraded the RP mechanics such that both vertical pots can be simultaneously placed very close to the beam. For the latter, TOTEM foresees an optics with extremely high $\beta^* \approx 2500\un{m}$ which would allow to reach the CNI region even at Run II energies. Moreover, recent experience with the $\beta^* = 90\un{m}$ optics at $\sqrt s = 13\un{TeV}$ shows that very low beam emittances can be achieved, thus possibly further reducing the RP distance from the beam.
