--- a/2013/1km paper/experimental_apparatus.tex
+++ b/2013/1km paper/experimental_apparatus.tex
@@ -39,7 +39,7 @@ This report uses a reference frame where $x$ denotes the horizontal axis (pointi
 \includegraphics[width=0.7\textwidth]{fig/elastic_principle.pdf}
 \includegraphics[width=0.2\textwidth]{fig/stationScheme.pdf}
 \caption{%
-Left: schematic view of the RP stations at $\pm220\,$m from IP5 with two proton tracks from an elastic event. Also shown are the built-in beam position monitors, BPM, and beam loss monitors, BLM. Right: Schematic view of the silicon detector positions in a RP station with a track traversing the overlap zone between top and horizontal detectors, providing detector alignment information. 
+Left: schematic view of the RP stations on both sides of IP5 with two proton tracks from an elastic event. Right: Schematic view of the silicon detector positions in a RP station with a track traversing the overlap zone between top and horizontal detectors, providing detector alignment information. 
 }
 \label{fig:rpsketch}
 \end{center}
