--- a/2013/1km paper/data_taking.tex
+++ b/2013/1km paper/data_taking.tex
@@ -5,7 +5,7 @@ The results reported here are based on data taken in October 2012
 during a dedicated LHC proton fill (3216)
 with the very special beam properties described in the previous section.
 
-The vertical RPs approached the beam to only $3\,\sigma_{y}$ from the centre, resulting in an acceptance for $|t|$-values down to $6 \times 10^{-4}\,\rm GeV^{2}$. The exceptionally close distance was possible due to the low beam intensity in this special beam operation: each beam contained only two colliding bunches and one non-colliding bunch for background monitoring, each with $10^{11}$ protons. A novel collimation strategy was applied to keep the beam halo background under control. As a first step, the primary 
+The vertical RPs approached the beam centre to only 3 times the beam width, $\sigma_{y}$, resulting in an acceptance for $|t|$-values down to $6 \times 10^{-4}\,\rm GeV^{2}$. The exceptionally close distance was possible due to the low beam intensity in this special beam operation: each beam contained only two colliding bunches and one non-colliding bunch for background monitoring, each with $10^{11}$ protons. A novel collimation strategy was applied to keep the beam halo background under control. As a first step, the primary 
 collimators (TCP) in the LHC betatron cleaning insertion (point 7) scraped the beam down to $2\,\sigma_{y}$; then the collimators were retracted to $2.5\,\sigma_{y}$, thus creating a $0.5\,\sigma_{y}$ gap between
 the beam edge and the collimator jaws. With the halo strongly suppressed 
 and no collimator producing showers by touching the beam, the RPs at 
