bugfix: removed double 'detectors' word
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@11498 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/experimental_apparatus.tex
+++ b/2013/1km paper/experimental_apparatus.tex
@@ -36,8 +36,9 @@ This report uses a reference frame where $x$ denotes the horizontal axis (pointi
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=0.7\textwidth]{fig/elastic_principle.pdf}
-\includegraphics[width=0.2\textwidth]{fig/stationScheme.pdf}
+\includegraphics{fig/elastic_principle.pdf}
+\hfil
+\includegraphics{fig/stationScheme.pdf}
 \caption{%
 Left: schematic view of the RP stations on both sides of IP5 with two proton tracks from an elastic event. Right: Schematic view of the silicon detector positions in a RP station with a track traversing the overlap zone between top and horizontal detectors, providing detector alignment information. 
 }
