implemented Vojtech's second comments
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@11505 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/bibliography.tex
+++ b/2013/1km paper/bibliography.tex
@@ -1,3 +1,5 @@
+% TODO: order
+
 \bibitem{plb43}
 	\Name{U.~Amaldi et al.}
 	\Review{Phys.~Lett.~B}{43}{1973}{231 -- 236}.
@@ -209,7 +211,13 @@
 	%doi = "http://dx.doi.org/10.1016/j.nuclphysb.2010.09.020",
 
 \bibitem{cahn82}
-	\Name{R. Cahn}
+	\Name{R.~Cahn}
 	\Review{Z.~Phys.~C}{15}{1982}{253 -- 260}
 	%title={Coulombic-hadronic interference in an eikonal model},
 	%doi={10.1007/BF01475009},
+
+\bibitem{martin97}
+	\Name{A.~Martin}
+	\Review{Phys.~Lett.~B}{404}{1997}{137 -- 140}.
+	%title = "A theorem on the real part of the high-energy scattering amplitude near the forward direction ",
+	%doi = "http://dx.doi.org/10.1016/S0370-2693(97)00510-8",
