--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -75,9 +75,9 @@ Let us consider the parametrisations below.
 A {\bf constant phase} is obviously the simplest choice:
 \begin{equation}
 \label{eq:nuc phase con}
-\arg {\cal A}^{\rm N}(t) = {\pi\over 2} - \arctan\rho = \hbox{const.}
+\arg {\cal A}^{\rm N}(t) = {\pi\over 2} - \arctan\rho = \hbox{const}
 \end{equation}
-Note that this is leads to a strict proportionality of real and imaginary part of the amplitude at all $t$.
+leading to a strict proportionality of real and imaginary part of the amplitude at all $t$. This parametrisation is not compatible with Martin's theorem \cite{martin97} stating that, under some assumptions, the real part of an even-signature scattering amplitude must change sign at low $|t|$.
 
 % ***
 \item[b)]
@@ -96,7 +96,7 @@ The parametrisation by {\bf Bailly et al.}~\cite{bailly87}:
 	\arg {\cal A}^{\rm N}(t) = {\pi\over 2} - \arctan {\rho\over 1 - {t\over t_{\rm d}}}
 	%\arg {\cal A}^{\rm N}(t) = \arctan \left[ {1\over\rho} \left(1 - {t\over t_{\rm d}} \right) \right]\ ,
 \end{equation}
-where $t_{\rm d} \approx -0.53\un{GeV^2}$ gives the position of the diffractive minimum at $8\un{TeV}$ (preliminary result derived from the $\beta^* = 90\un{m}$ data \cite{8tev-90m}). This phase has a behaviour qualitatively similar to the model of Jenkovszky et al., see Figure~\ref{fig:phase illustration}.
+where $t_{\rm d} \approx -0.53\un{GeV^2}$ gives the position of the diffractive minimum at $8\un{TeV}$ (preliminary result derived from the $\beta^* = 90\un{m}$ data \cite{8tev-90m}). This phase has a behaviour qualitatively similar to the model of Jenkovszky et al., see Figure~\ref{fig:phase illustration}. Similarly to the constant phase, this parametrisation is not compatible with Martin's theorem \cite{martin97}.
 
 % ***
 \item[d)]
@@ -122,7 +122,7 @@ It should be noted that the nuclear phase has a strong influence on the amplitud
 \subsubsection{Coulomb-Nuclear Interference Formulae}
 \label{sec:cni interference}
 
-The {\bf simplified West-Yennie formula (SWY)} \cite{wy68} was derived in the framework of perturbative quantum field theory by evaluating the lowest-order Feynman diagrams that comprise both nuclear and Coulomb interactions. In this approach, the interference is reduced to an additional phase between the Coulomb and nuclear amplitudes. Moreover, several approximations were used in the derivation. First, in order to avoid integrating over off-mass-shell contributions to the nuclear amplitude (essentially unknown), a very slow variation of the nuclear amplitude phase was assumed: $\arg {\cal A}^{\rm N} \approx \hbox{const}$. Then, in order to obtain a closed-form expression, the exponential slope of the nuclear modulus was assumed constant (i.e.~only the $b_1$ parameter is non-zero in the parametrisation Eq.~(\ref{eq:nuc mod})). The original formula did not contain the electromagnetic form factor ${\cal F}$, which was added later by hand:
+The {\bf simplified West-Yennie formula (SWY)} \cite{wy68} was derived in the framework of perturbative quantum field theory by evaluating the lowest-order Feynman diagrams that comprise both nuclear and Coulomb interactions. In this approach, the interference is reduced to an additional phase between the Coulomb and nuclear amplitudes. Moreover, several approximations were used in the derivation. First, in order to avoid integrating over off-mass-shell contributions to the nuclear amplitude (essentially unknown), a very slow variation of the nuclear amplitude phase was assumed: $\arg {\cal A}^{\rm N} \approx \hbox{const}$. Then, in order to obtain a closed-form expression, the exponential slope of the nuclear modulus was assumed constant (i.e.~only the $b_1$ parameter is non-zero in the parametrisation Eq.~(\ref{eq:nuc mod})) which is formally incompatible with the existence of the diffractive minimum. The original formula did not contain the electromagnetic form factor ${\cal F}$, which was added later by hand:
 \begin{equation}
 \label{eq:int swy}
 	{\d\sigma\over \d t}^{\rm C+N} = {\pi (\hbar c)^2 \over s p^2} \left | {\alpha s\over t} {\cal F}^2 \e^{\I\alpha \Phi(t)} + {\cal A}^{\rm N} \right |^2\ ,\qquad
@@ -244,7 +244,7 @@ BOTTOM RIGHT: the effects induced by the Coulomb interaction for each of the fit
 \end{center}
 \end{figure*}
 
-Table~\ref{tab:fit exp1} shows that both fits with constant phase are essentially identical and have bad fit quality. The step-2 fit using both $\beta^*=1000$ and $90\un{m}$ data can be excluded with $7.6\un{\sigma}$ significance. Consequently, since the combination of $N_b=1$ and constant phase is the only one compatible with the SWY formula, its application is excluded, too.
+Table~\ref{tab:fit exp1} shows that both fits with constant phase are essentially identical and have bad fit quality. The step-2 fit using both $\beta^*=1000$ and $90\un{m}$ data can be excluded with $7.6\un{\sigma}$ significance. Consequently, since the combination of $N_b=1$ and constant phase is the only one compatible with the SWY formula, its application to the presented data is excluded, too.
 
 
 Although the quality of the fit with the peripheral phase is good, this option seems disfavoured from different perspectives.
